--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,12 @@
 <body class="bg-light">
   <main class="container">
 
+    <div class="row">
+        <div id="warning" class="alert alert-warning hidden" role="alert">
+          Oops, Something Went Wrong
+        </div>
+    </div>
+
 
     <form id="ideal-form">
       <div class="row">
